# RustServer

./: Cargo.toml  README.md  build_android_server.sh  build_ios_server.sh  build_universal.sh
.fleet/: run.json
demo/: Cargo.toml
demo/src/: main.rs  server.rs
ios_server/: Cargo.toml  cbindgen.toml
ios_server/src/: lib.rs
mobile_server/: Cargo.toml  Cargo.toml.bak  build.rs  cbindgen.toml  config.toml
mobile_server/android/cpp/: mobile_server.h
mobile_server/include/: ios_server.h
mobile_server/src/: lib.rs
